# Algebra

./: .gitignore  CMakeLists.txt  README.md  main.cpp
excepts/: MatrixExcepts.h  SpacesExcepts.h  VectorExcepts.h
libs/: Algebra.h  Matrix.h  Space.h  Spaces.h  Vector.h
src/: Equation.cpp  Matrix.cpp  Space.cpp  Vector.cpp  main.cpp
utils/: Equation.h
